introduced java logging framework.
git-svn-id: https://svn.science.uu.nl/repos/project.fisme.java/DWOJAppletClient/trunk@9047 58dd2db4-0f11-0410-9df4-da15f00f50bd